force-app/main/default/objects/Hotel_Meeting_Room__c/Hotel_Meeting_Room__c.object-meta.xml
<CustomObject>
    <description>This object allows to add meeting rooms to a hotel record.</description>
    <label>Hotel Meeting Room</label>
    <nameField>
        <label>Hotel Meeting Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotel Meeting Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>