force-app/main/default/objects/Hotel_Meeting_Room__c/fields/Air_Conditioning__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if the room provides air-conditioning.</inlineHelpText>
    <label>Air-Conditioning</label>
    <type>Checkbox</type>
</CustomField>