force-app/main/default/objects/Hotel_Meeting_Room__c/fields/Banquet__c.field-meta.xml
<CustomField>
    <fullName>Banquet__c</fullName>
    <inlineHelpText>Add information on how many people the meeting room can hold in banquet style.</inlineHelpText>
    <label>Banquet</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>