force-app/main/default/objects/Hotel_Meeting_Room__c/fields/Class_Room_Style__c.field-meta.xml
<CustomField>
    <fullName>Class_Room_Style__c</fullName>
    <inlineHelpText>Add information on how many people the meeting room can hold in class room style.</inlineHelpText>
    <label>Class Room Style</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>