force-app/main/default/objects/Hotel_Meeting_Room__c/fields/Daylight__c.field-meta.xml
<CustomField>
    <fullName>Daylight__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if the meeting room is disposed to daylight.</inlineHelpText>
    <label>Daylight</label>
    <type>Checkbox</type>
</CustomField>