force-app/main/default/objects/Hotel_Meeting_Room__c/fields/Floor_Level__c.field-meta.xml
<CustomField>
    <fullName>Floor_Level__c</fullName>
    <inlineHelpText>Add the number value of the floor on which the meeting room is situated. Ground floor equals &apos;0&apos;.</inlineHelpText>
    <label>Floor Level</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>