force-app/main/default/objects/Hotel_Meeting_Room__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <inlineHelpText>Select the hotel record for which you would like to add a meeting room.</inlineHelpText>
    <label>Hotel</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Hotel Meeting Rooms</relationshipLabel>
    <relationshipName>Hotel_Meeting_Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>