force-app/main/default/objects/Hotel_Meeting_Room__c/fields/Reception__c.field-meta.xml
<CustomField>
    <fullName>Reception__c</fullName>
    <inlineHelpText>Add information on how many people the meeting room can hold in reception setup.</inlineHelpText>
    <label>Reception</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>