force-app/main/default/objects/Hotel_Meeting_Room__c/fields/Room_Height_m__c.field-meta.xml
<CustomField>
    <fullName>Room_Height_m__c</fullName>
    <inlineHelpText>Add the room height of the meeting room.</inlineHelpText>
    <label>Room Height (m)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>