force-app/main/default/objects/Hotel_Meeting_Room__c/fields/Rows__c.field-meta.xml
<CustomField>
    <fullName>Rows__c</fullName>
    <inlineHelpText>Add information on how many people the meeting room can hold in rows.</inlineHelpText>
    <label>Rows</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>