force-app/main/default/objects/Hotel_Meeting_Room__c/fields/Size_m2__c.field-meta.xml
<CustomField>
    <fullName>Size_m2__c</fullName>
    <formula>Room_Height_m__c *  Room_Width_m__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The value is calculated from width (m) x length (m).</inlineHelpText>
    <label>Size (m2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>