force-app/main/default/objects/Hotel_Meeting_Room__c/fields/uShape__c.field-meta.xml
<CustomField>
    <fullName>uShape__c</fullName>
    <inlineHelpText>Add information on how many people the meeting room can hold in ushape style.</inlineHelpText>
    <label>uShape</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>